Fixed horizontal scrolling and changed menu sizes

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ header {
     z-index: 1000;
     display: flex;
     justify-content: center;
-    padding: 10px 0;
+    padding: 5px 0;
     border-radius: 8px;
 }
 
@@ -86,13 +86,13 @@ header {
 }
 
 .header-nav ul li {
-    margin: 0 15px;
+    margin: 0 5px;
 }
 
 .header-nav ul li a {
     color: #ffffff;
     font-weight: bold;
-    padding: 5px 10px;
+    padding: 5px 2px;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -260,6 +260,15 @@ footer a:hover {
     .grid-container {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
+
+    header nav ul li a {
+        font-size: 14px;
+        padding: 8px 10px;
+    }
+
+    header nav {
+        padding: 10px 0;
+    }
 }
 
 .container-form {
@@ -415,4 +424,8 @@ button:hover {
 
 .swiper-pagination-bullet-active {
   background: #2980b9;
+}
+
+body {
+    overflow-x: hidden;
 }
